res_http_media_cache.c: Fix merge errors from 18 -> master

ASTERISK-27871 #close

Change-Id: I6624f2d3a57f76a89bb372ef54a124929a0338d7